[package]
name = "crystal-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__dev = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
bstr = "1.11.1"
num_enum = "0.7.3"
chrono = "0.4.39"
byteorder = "1.5.0"
integer-hasher = "0.1.1"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
tokio-tungstenite = "0.26.1"
tokio = { version = "1.42.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
bytes = "1.9.0"
futures-util = "0.3.31"
age = { version = "0.11.1", features = ["async"] }
machineid-rs = { git = "https://github.com/Crystal-Server/machineid-rs.git", rev = "aab4bad969d2ca084a1aa4905c1e95d40e5ffdb4" }
async-stream = "0.3.6"
urlencoding = "2.1.3"
