[package]
name = "crystal-server"
version = "0.1.0"
edition = "2021"
authors = ["ryi3r <ryi3r@duck.com>"]

license-file = "LICENSE"
description = "The client of a back-end provider to create multiplayer games."
homepage = "https://crystal-server.co"
repository = "https://github.com/Crystal-Server/rust-client.git"
readme = "README.md"
keywords = ["multiplayer", "service"]
include = ["LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[features]
default = []
__dev = ["dep:tracing", "dep:tracing-subscriber"]
__local = []

[dependencies]
bstr = "1.11.3"
num_enum = "0.7.3"
chrono = "0.4.39"
byteorder = "1.5.0"
integer-hasher = "0.1.1"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
tokio-tungstenite = "0.26.2"
tokio = { version = "1.43.0", features = ["net", "rt", "sync", "time"] }
bytes = "1.10.0"
futures-util = "0.3.31"
age = { version = "0.11.1", features = ["async"] }
machineid-crystal = "1.2.5"
async-stream = "0.3.6"
urlencoding = "2.1.3"
serde = "1.0.217"
